# vulcan-sql-examples

./: .gitignore  LICENSE  README.md
admin-panel-using-appsmith/: README.md
clickhouse-example/: package-lock.json  package.json  profiles.yaml  vulcan.yaml
clickhouse-example/sqls/: flights.sql  flights.yaml
covid19-global-data-api/: README.md  result.json
covid19-global-data-api/sqls/: max_cases.sql  max_deaths.sql  min_cases.sql  min_deaths.sql  reports.sql
covid19-global-data-api/visualizations/streamlit/: Procfile  README.md  fly.toml  main.py  pyproject.toml
customer-support-on-twitter/: .gitignore  README.md  package-lock.json  package.json  profiles.yaml  vulcan.yaml
customer-support-on-twitter/gen-embeddings/: .env.copy  gen_embeddings.py  pyproject.toml
customer-support-on-twitter/sqls/: supports.sql  supports.yaml
customer-support-on-twitter/streamlit-demo/: .env.copy  fly.toml  main.py  pyproject.toml
daily-revenue/: README.md
daily_revenue/: .gitignore  Makefile  package.json  profile.yaml  script.js  vulcan.yaml
daily_revenue/sqls/: daily_revenue.sql  daily_revenue.yaml
data-sharing/: README.md  departments.csv  package-lock.json  package.json  passwd.txt  vulcan.yaml
data-sharing/sqls/: departments.sql  departments.yaml
dbt-jaffle-shop/: README.md  package-lock.json  package.json  profiles.yaml  vulcan.yaml
dbt-jaffle-shop/jaffle_shop/: .gitignore  pyproject.toml
dbt-jaffle-shop/sqls/: customers.sql  customers.yaml
dbt-jaffle-shop/test-data/: customers.csv  getdata.js  mydata.db  orders.csv  raw_payments.csv  stg_orders.csv  stg_payments.csv
huggingface/table-question-answering/: README.md  Top200StaredRepositories.csv  package.json  profiles.yaml  vulcan.yaml
huggingface/text-generation/: 2023-QS-World-University-Rankings.csv  README.md  package.json  vulcan.yaml
kaggle-credit-card-customers/: .gitignore  .gitpod.yml  README.md  package-lock.json  package.json  profiles.yaml  vulcan.yaml
kaggle-credit-card-customers/data/: .gitignore  churners.csv  createdb.js  (+1 more)
read-data-from-internet/: README.md  package-lock.json  package.json  vulcan.yaml
recipes-data-api/: .gitignore  README.md  package-lock.json  package.json  profiles.yaml  vulcan.yaml
restapi-caller/: README.md  package-lock.json  package.json  vulcan.yaml
vulcan-sql-extensions/: README.md  package-lock.json  package.json  profiles.yaml  vulcan.yaml
yelp-dataset-api/: .gitignore  README.md  package-lock.json  package.json  profiles.yaml  vulcan.yaml
yelp-dataset-api/data-viewer/: jsonl2parquet.ipynb  parquet_viewer.ipynb  pyproject.toml
yelp-dataset-api/streamlit-demo/: Procfile  fly.toml  main.py  pyproject.toml
(+76 files in other folders)
