[tool.poetry]
name = "streamlit-demo"
version = "0.1.0"
description = ""
authors = ["Jimmy Yeh <jimmy.yeh@cannerdata.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.24.1"
cohere = "^4.16.0"
langchain = "^0.0.235"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
numpy = "^1.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
