[tool.poetry]
name = "data-viewer"
version = "0.1.0"
description = ""
authors = ["Jimmy Yeh <jimmy.yeh@vulcansql.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
pyarrow = "^12.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
